# Rag_Claude

./: .gitignore  GRADIO_GUIDE.md  KNOWLEDGE_GRAPH_GUIDE.md  KNOWLEDGE_GRAPH_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  __init__.py  gradio_app.py  main.py  pyproject.toml  rag.py  requirements.txt  start_gradio.sh  start_gradio_kg.sh  stop_gradio.sh  test_gradio.py  test_summary.py
.github/: copilot-instructions.md
.github/workflows/: smoke-tests.yml
chunkers/: __init__.py  text_chunker.py
demo_local_db/: chroma.sqlite3
demo_voyage_db/: chroma.sqlite3
embeddings/: __init__.py  base_embeddings.py  openai_embeddings.py  sentence_transformer_embeddings.py  voyage_embeddings.py
examples/: README.md  add_to_existing_collection.py  basic_usage  custom_embeddings.py  knowledge_graph_demo.py  load_multiple_files.py  manage_collections.py  quick_demo_embeddings.py  quick_kg_demo.py  smoke_tests.py  test-1.py  web_scraping_recursive.py  web_scraping_sitemap.py
gradio/: README.md  gradio_app.py  gradio_app_no_browser.py  gradio_app_with_kg.py  start_gradio.sh  stop_gradio.sh
guides/: COMPLETE_FEATURE_SUMMARY.md  CUSTOM_EMBEDDINGS.md  EMBEDDINGS_SUMMARY.md  EXIT_BUTTON_INFO.md  FINAL_SUMMARY.md  GRADIO_GUIDE.md  GRADIO_KG_SUMMARY.md  GRADIO_KNOWLEDGE_GRAPH.md  ORGANIZATION.md  QUICKSTART.md  README.md  SHUTDOWN_CLEANUP.md  TEST_EXIT_BUTTON.md  WEB_SCRAPING_GUIDE.md  WEB_SCRAPING_SUMMARY.md
loaders/: __init__.py  base.py  csv_loader.py  docx_loader.py  md_loader.py  pdf_loader.py  txt_loader.py  web_loader.py
outputs/: quick_demo_graph.html  summary_20251008_153128.txt
quick_demo_local/: chroma.sqlite3
ragsystem/: __init__.py  graph_rag.py  rag.py
scripts/: update_pyproject_from_requirements.py
storage/: __init__.py  vector_storage.py
test_graph_custom_emb/: chroma.sqlite3
test_graph_db/: chroma.sqlite3
test_graph_rag_db/: chroma.sqlite3
test_temp_db/: chroma.sqlite3
tests/: README.md  test_custom_embeddings.py  test_integration_data_load.py  test_knowledge_graph.py  test_persistence.py  test_smoke.py  test_summary.py
(+15 files in other folders)
