[project]
name = "rag-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "polars>=1.34.0",
    "pypdf>=3.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
# development dependencies used for testing and tooling. Add with:
#   uv add --dev pytest tomli tomli-w
dev = [
    "pytest>=7.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
]
